# singlestore-haystack

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: embedding_retrieval.py  hybrid_retrieval.py  lotr_rag.py  lotr_writer.py
src/haystack_integrations/components/retrievers/singlestore_haystack/: __init__.py  bm25_retriever.py  embedding_retriever.py  retriever.py
src/haystack_integrations/document_stores/singlestore_haystack/: __about__.py  __init__.py  document_store.py  filter.py
tests/: __init__.py  test_bm25_retriaval.py  test_document_store.py  test_embedding_retrieval.py  util.py
